# DataWet1

./: .gitignore  AVLTree.cpp  AVLTree.h  Auxilaries.h  CMakeLists.txt  Company.cpp  Company.h  Dry.docx  Employee.cpp  Employee.h  OldCode.rar  TODO  Workplace.cpp  Workplace.h  exceptions.h  insert.cpp  library1.cpp  library1.h  main.cpp  remove.cpp  submissions.txt
